--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
-		"mariadb": "^3.4.0"
+		"mariadb": "^3.4.0",
+		"swagger-ui-express": "^5.0.1"
 	}
 }
